--- a/Coffe/Coffe.csproj
+++ b/Coffe/Coffe.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Entities\Product\MaterialsInProduct.cs" />
     <Compile Include="Entities\Product\Product.cs" />
     <Compile Include="Entities\Users\User.cs" />
+    <Compile Include="UI\sign up.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\sign up.Designer.cs">
+      <DependentUpon>sign up.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +66,18 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Sign in.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Sign in.Designer.cs">
+      <DependentUpon>Sign in.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="UI\Sign in.resx">
+      <DependentUpon>Sign in.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\sign up.resx">
+      <DependentUpon>sign up.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainPage.resx">
       <DependentUpon>MainPage.cs</DependentUpon>
     </EmbeddedResource>
