--- a/Coffe/Coffe.csproj
+++ b/Coffe/Coffe.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Entities\Product\MaterialsInProduct.cs" />
     <Compile Include="Entities\Product\Product.cs" />
     <Compile Include="Entities\Users\User.cs" />
+    <Compile Include="UI\Product.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Product.Designer.cs">
+      <DependentUpon>Product.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\sign up.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +78,9 @@
     <Compile Include="UI\Sign in.Designer.cs">
       <DependentUpon>Sign in.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UI\Product.resx">
+      <DependentUpon>Product.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Sign in.resx">
       <DependentUpon>Sign in.cs</DependentUpon>
     </EmbeddedResource>
