--- a/Coffe/Coffe.csproj
+++ b/Coffe/Coffe.csproj
@@ -46,9 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\Authentication\LogedInUser.cs" />
     <Compile Include="Core\Helpers\PrimeryKeyAttribute.cs" />
     <Compile Include="Core\Storage\DataBase.cs" />
     <Compile Include="Core\Storage\IDataBase.cs" />
+    <Compile Include="Entities\Cart\Cart.cs" />
     <Compile Include="Entities\Materials\Materials.cs" />
     <Compile Include="Entities\Product\MaterialsInProduct.cs" />
     <Compile Include="Entities\Product\Product.cs" />
@@ -59,11 +61,11 @@
     <Compile Include="UI\AddProduct.Designer.cs">
       <DependentUpon>AddProduct.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\Cart.cs">
+    <Compile Include="UI\CartPage.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\Cart.Designer.cs">
-      <DependentUpon>Cart.cs</DependentUpon>
+    <Compile Include="UI\CartPage.Designer.cs">
+      <DependentUpon>CartPage.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Product.cs">
       <SubType>Form</SubType>
@@ -94,8 +96,8 @@
     <EmbeddedResource Include="UI\AddProduct.resx">
       <DependentUpon>AddProduct.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\Cart.resx">
-      <DependentUpon>Cart.cs</DependentUpon>
+    <EmbeddedResource Include="UI\CartPage.resx">
+      <DependentUpon>CartPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Product.resx">
       <DependentUpon>Product.cs</DependentUpon>
@@ -118,6 +120,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Properties\DataSources\Coffe.Entities.Cart.CartItem.datasource" />
     <None Include="Properties\DataSources\Coffe.Entities.Product.Product.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
