--- a/Coffe/Coffe.csproj
+++ b/Coffe/Coffe.csproj
@@ -59,6 +59,12 @@
     <Compile Include="UI\AddProduct.Designer.cs">
       <DependentUpon>AddProduct.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Cart.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Cart.Designer.cs">
+      <DependentUpon>Cart.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Product.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -87,6 +93,9 @@
     </Compile>
     <EmbeddedResource Include="UI\AddProduct.resx">
       <DependentUpon>AddProduct.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Cart.resx">
+      <DependentUpon>Cart.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Product.resx">
       <DependentUpon>Product.cs</DependentUpon>
